Changelog do GERADO

v0.94: 
- Implementação da geração do template nifty

v0.93: Thu Jun 29 00:03:17 2017 -0300 
- Melhoria na geração de PDF a partir de arquivos jrxml e não de arquivos compilados , jasper.
- Trazendo a infra para geração de arquivos CSV.

Mon Jun 12 14:55:26 2017 -0300
- Atualização das libs spring, hibernate, cxf, e outras.
- Implantação da geração do código compativel com swagger 

Tue Mar 14 14:41:26 2017 -0300
- Corrigido bug ao tentar criar relacionamento no Visual.
- Corrigido o nome de Permissão que estava escrito Permmissão
- Removendo as colunas que referenciam atributos para imagens
- Melhoria no tratamento do campo visivel nos modais, combo e multiselect
- Correção do nome do template no modal.
- Copiado o Backgrid.ColumnManager para o vendor do commons-files
- Geração do AuthorizationServiceImp.

v0.92 (06/03/2017 14:29:39)
- Removido o bootbox e substituido por switAlert.
- etc

v0.91: